--- a/src/app/features/books/book-list/book-list.component.html
+++ b/src/app/features/books/book-list/book-list.component.html
@@ -39,6 +39,7 @@
       <th>Type</th>
       <th>Author</th>
       <th>Locked</th>
+      <th>Quantity</th>
       <th style="width: 300px">Actions</th>
     </tr>
   </ng-template>
@@ -56,21 +57,46 @@
           [disabled]="true"
         ></p-checkbox>
       </td>
+      <td>{{ book.quantity }}</td>
       <td>
         <a
           [routerLink]="['./view', book.id]"
           class="btn btn-sm btn-outline-primary me-1"
-          ><i class="pi pi-eye"></i> View</a
+          ><i class="pi pi-eye"></i></a
         >
         <a
           [routerLink]="['./update', book.id]"
           class="btn btn-sm btn-outline-warning me-1"
-          ><i class="pi pi-pencil"></i> Update</a
+          ><i class="pi pi-pencil"></i
+        ></a>
+        <button
+          (click)="delete(book.id)"
+          class="btn btn-sm btn-outline-danger me-1"
         >
-        <button (click)="delete(book.id)" class="btn btn-sm btn-outline-danger">
-          <i class="pi pi-times"></i> Delete
+          <i class="pi pi-times"></i>
         </button>
+        <button
+          (click)="changeQuantity(book, true)"
+          class="btn btn-sm btn-outline-success me-1"
+        >
+          +10
+        </button>
+        <button
+          (click)="changeQuantity(book, false)"
+          class="btn btn-sm btn-outline-danger me-1"
+        >
+          - 10
+        </button>
+        <a
+        class="btn btn-sm btn-outline-warning me-1"
+        (click)="viewHistory(book)"
+        ><i class="pi pi-list"></i
+      ></a>
       </td>
     </tr>
   </ng-template>
 </p-table>
+
+<p-dialog header="Book Inventory History" [(visible)]="showHistory" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+  <app-book-inventory-history [book]="selectedBook"></app-book-inventory-history>
+</p-dialog>
